# Titanic-Dataset-Prediction

./: .gitignore  README.md  main.py  pyproject.toml  submission.csv
